Galería/Reservas+Page-404

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DogSides - Un Sevicio Selecto</title>
     <!-- metas para seo  -->
-    <meta name="description" content="Nos especializamos en el buen trato y atención de su mascota. Contamos con personal a disposición en mención pro bienestar animal para un servicio VIP">
-    <meta name="keywords" content="peluquería canina, perros, dogsides"
-    <!-- link a favicon -->
+    <meta name="description"
+        content="Nos especializamos en el buen trato y atención de su mascota. Contamos con personal a disposición en mención pro bienestar animal para un servicio VIP">
+    <meta name="keywords" content="peluquería canina, perros, dogsides" <!-- link a favicon -->
     <link rel="shortcut icon" href="multimedia/favicon/icons8-dog-house-24.png" type="image/x-icon">
 
     <!-- link al css de boostrap -->
@@ -65,7 +65,7 @@
                         </li>
 
                         <li>
-                            <button class="btn"><a href="vistas html/Reservas.html">RESERVA</a>
+                            <button class="btn"><a href="vistas html/RESERVA.html">RESERVA</a>
                             </button>
                         </li>
 
@@ -99,39 +99,43 @@
                 <span><br></span>
 
                 <p class="one"> Nos especializamos en el buen trato y atención de su mascota, es por esto que hemos
-                implementado un sistema de reserva de hora. Con el propósito de dar el espacio y tiempo
-                necesario
-                que requiere el servicio (VIP) que usted está pagando. <br> El enfoque siempre va ser de todas
-                maneras,
-                el no estresar tanto a la mascota como a su peluquero. </p>
+                    implementado un sistema de RESERVA de hora. Con el propósito de dar el espacio y tiempo
+                    necesario
+                    que requiere el servicio (VIP) que usted está pagando. <br> El enfoque siempre va ser de todas
+                    maneras,
+                    el no estresar tanto a la mascota como a su peluquero. </p>
 
                 <span><br></span>
                 <span><br></span>
 
 
                 <p>Ofrecemos productos de alta gama en el mercado y nos esforzamos por tener el
-                personal
-                adecuado para brindar dicho servicio. Contamos con el personal a disposición y certificados con
-                la
-                mención de pro-bienestar animal. Nuestro personal está preparado para dar primeros auxilios,
-                posee
-                técnicas de revisión y chequeo veterinarios en general.</p>
+                    personal
+                    adecuado para brindar dicho servicio. Contamos con el personal a disposición y certificados con
+                    la
+                    mención de pro-bienestar animal. Nuestro personal está preparado para dar primeros auxilios,
+                    posee
+                    técnicas de revisión y chequeo veterinarios en general.</p>
 
                 <span><br></span>
 
 
-                <br> <p>
-                Una vez que ingrese a nuestra página web usted podrá:</p>
+                <br>
+                <p>
+                    Una vez que ingrese a nuestra página web usted podrá:</p>
 
-                <div class="justify"> <p>- Registrar un perfil y una ficha para
-                    su/s mascota/s
-                    <br>- Comprar nuestros productos recomendados
-                    <br>- Revisar el itinerario mensual y horas disponibles </span>
-                    <span><br> </p>
-                </div> <p>
-                Inmediatamente llegará a su correo - una notificación para confirmar la próxima
-                visita a
-                nuestro salón el día y a la hora que usted haya escogido. </p>
+                <div class="justify">
+                    <p>- Registrar un perfil y una ficha para
+                        su/s mascota/s
+                        <br>- Comprar nuestros productos recomendados
+                        <br>- Revisar el itinerario mensual y horas disponibles </span>
+                        <span><br>
+                    </p>
+                </div>
+                <p>
+                    Inmediatamente llegará a su correo - una notificación para confirmar la próxima
+                    visita a
+                    nuestro salón el día y a la hora que usted haya escogido. </p>
 
                 <span><br></span>
                 <span><br></span>
@@ -171,15 +175,16 @@
 
                         <div class="carousel-inner m-auto container">
 
-                            <div id="caption" class="row carousel-item active text-center mx-auto">
+                            <div id="caption" class="carousel-item active text-center align-middle">
 
-                                <img src="multimedia/galeria/canes/Ramses/Ramses.425273.webp" class="img-fluid"
+                                <img src="multimedia/galeria/canes/Ramses.425273.webp" class="img-fluid"
                                     alt="Acariciando a perro en mesa grooming previo al corte">
 
 
                                 <span>
 
-                                    <span><span><br></span></span>
+                                    <span><br></span>
+                                    <span><br></span>
                                     <span>(Ramses)</span>
 
 
@@ -190,32 +195,35 @@
                             </div>
 
                             <div class="carousel-item align-middle">
-                                <img src="multimedia/galeria/canes/Ramses/Ramses.444760.webp" class="img-fluid"
+                                <img src="multimedia/galeria/canes/Ramses.444760.webp" class="img-fluid"
                                     alt="Perro en mesa grooming mirando a la derecha">
                             </div>
 
                             <div id="caption" class="carousel-item align-middle text-center">
-                                <img src="multimedia/galeria/canes/Ramses/Ramses.1411402.webp" class="img-fluid"
+                                <img src="multimedia/galeria/canes/Ramses.1411402.webp" class="img-fluid"
                                     alt="Perro en mesa grooming inicio del corte">
 
-                                <span >
+                                <span>
 
                                     <span><br></span>
                                     <span><br></span>
                                     <span><br></span>
 
                                     <p> Así llegó Ramses... <br> un viejito de 14 años!
-                                    Quien no me recibió muy contento que se diga!! jeje... nahh.. pero después...<br>Ya
-                                    verán</p></span>
+                                        Quien no me recibió muy contento que se diga!! jeje... nahh.. pero
+                                        después...<br>Ya
+                                        verán</p>
+                                </span>
+
                             </div>
 
                             <div class="carousel-item align-middle">
-                                <img src="multimedia/galeria/canes/Ramses/Ramses.5503233.webp" class="img-fluid"
+                                <img src="multimedia/galeria/canes/Ramses.5503233.webp" class="img-fluid"
                                     alt="Perro en mesa grooming mirando a la derecha">
                             </div>
 
                             <div id="caption" class="carousel-item align-middle text-center">
-                                <img src="multimedia/galeria/canes/Ramses/Ramses.5559614.webp" class="img-fluid"
+                                <img src="multimedia/galeria/canes/Ramses.5559614.webp" class="img-fluid"
                                     alt="Perro en mesa grooming mirando a la derecha">
 
                                 <span>
@@ -224,34 +232,36 @@
                                     <span><br></span>
                                     <span><br></span>
 
-                                    <p>Aquí está como queeee... <br> bueeeno.. al menos ahí vamos 
-                                    <br>/(¨/\¨)\
-                                    <br> de a poco ...
-                                    <br>(con ganas de descansar parece)</span></p> 
+                                    <p>Aquí está como queeee... <br> bueeeno.. al menos ahí vamos
+                                        <br>(¨/\¨)
+                                        <br> de a poco ...
+                                        <br>(con ganas de descansar parece)
+                                </span></p>
 
                             </div>
 
                             <div class="carousel-item align-middle">
-                                <img src="multimedia/galeria/canes/Ramses/Ramses.5709011.webp" class="img-fluid"
+                                <img src="multimedia/galeria/canes/Ramses.5709011.webp" class="img-fluid"
                                     alt="Perro pequeño en mesa grooming mirando a su derecha">
                             </div>
 
                             <div class="carousel-item align-middle">
-                                <img src="multimedia/galeria/canes/Ramses/Ramses.0318610.webp" class="img-fluid"
+                                <img src="multimedia/galeria/canes/Ramses.0318610.webp" class="img-fluid"
                                     alt="Perro pequeño en brazos angulo izquierdo">
                             </div>
 
                             <div class="carousel-item align-middle text-center">
-                                <img src="multimedia/galeria/canes/Ramses/Ramses.50216443.webp" class="img-fluid"
+                                <img src="multimedia/galeria/canes/Ramses.50216443.webp" class="img-fluid"
                                     alt="Perro pequeño en brazos angulo frontal">
 
                                 <span id="caption">
 
                                     <span><br></span>
                                     <span><br></span>
-
+                                    <span><br></span>
                                     <p>Así quedó el gruñón jaj.. <br> La dueña le dijo confianzudo .. <br> después, como
-                                    que ya <br>no se quería ír ♥ </p></span>
+                                        que ya <br>no se quería ír <br> ♥ </p>
+                                </span>
                             </div>
 
                         </div>
@@ -389,8 +399,8 @@
 
     </footer>
 
-<!-- inicia script js -->
-<script src="js/bootstrap.bundle.min.js"></script>
+    <!-- inicia script js -->
+    <script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
 
