--- a/vistas html/Galería.html
+++ b/vistas html/Galería.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DogSides - Galería</title>
     <!-- metas para seo  -->
-    <meta name="description" content="Nos especializamos en el buen trato y atención de su mascota. Contamos con personal a disposición en mención pro bienestar animal para un servicio VIP">
-    <meta name="keywords" content="peluquería canina, perros, dogsides, fotos, destacados"
+    <meta name="description"
+        content="Nos especializamos en el buen trato y atención de su mascota. Contamos con personal a disposición en mención pro bienestar animal para un servicio VIP">
+    <meta name="keywords" content="peluquería canina, perros, dogsides, fotos, destacados">
     <!-- link a favicon -->
     <link rel="shortcut icon" href="../multimedia/favicon/icons8-dog-house-24.png" type="image/x-icon">
-
-    <!-- link al css de boostrap -->
+    <!-- link css de boostrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- link a mi css -->
+    <!-- link css principal -->
     <link rel="stylesheet" href="../css/styles.css">
+    <!-- link fresco -->
+    <link rel="stylesheet" type="text/css" href="../css/fresco.css" />
 
 </head>
 
@@ -64,7 +65,7 @@
                         </li>
 
                         <li>
-                            <button class="btn"><a href="../vistas html/Reservas.html">RESERVA</a>
+                            <button class="btn"><a href="../vistas html/RESERVA.html">RESERVA</a>
                             </button>
                         </li>
 
@@ -75,18 +76,155 @@
 
     </section>
 
-    <!-- cierre de pestañas cabecera -->
+    <section id="tg">
+        <h1>GALERIA</h1>
+    </section>
 
 
     <main>
-    
-    <section>
-        <h1 id="working">GALERIA</h1>
-    </section>
 
-    
 
- 
+        <section id="galería">
+            <div class="fot-1">
+                <a href="../multimedia/galeria/canes/1.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/1.webp"
+                        alt="Perro Golden Retriever posando jadeando con lengua afuera para foto al lado de su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-2">
+                <a href="../multimedia/galeria/canes/2.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/2.webp"
+                        alt="Perro Boyero de Berna posando y jadeando con lengua afuera para foto al lado de su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-3">
+                <a href="../multimedia/galeria/canes/3.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/3.webp"
+                        alt="Perro Pastor Suizo posando y 'riendo' con lengua afuera para foto al lado de su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-4">
+                <a href="../multimedia/galeria/canes/4.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/4.webp"
+                        alt="Perro Pastor Suizo posando y jadeando con lengua afuera para foto al lado de su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-5">
+                <a href="../multimedia/galeria/canes/5.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/5.webp"
+                        alt="Perro Bichón Frisé con pechera roja posando y jadeando con lengua afuera para foto al lado de su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-6">
+                <a href="../multimedia/galeria/canes/6.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/6.webp"
+                        alt="Perro Pastor Alemán posando y jadeando con lengua afuera para foto al lado de su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-7">
+                <a href="../multimedia/galeria/canes/7.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/7.webp"
+                        alt="Perro Gran Pirineo de Montaña posando y jadeando con lengua afuera para foto al lado de su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-8">
+                <a href="../multimedia/galeria/canes/8.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/8.webp"
+                        alt="Perrita Shih Tzu con colitas para recoger pelo, posando para foto al lado de su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-9">
+                <a href="../multimedia/galeria/canes/9.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/9.webp"
+                        alt="Perrita Shih Tzu con colitas para recoger pelo, posando y jadeando con lengua afuera para foto al lado de su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-10">
+                <a href="../multimedia/galeria/canes/10.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/10.webp"
+                        alt="Perritas Shih Tzu con colitas para recoger pelo, posando y jadeando con lengua afuera para foto al lado de su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-11">
+                <a href="../multimedia/galeria/canes/11.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/11.webp"
+                        alt="Perrita Mestiza en brazos posando para foto al lado de su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-12">
+                <a href="../multimedia/galeria/canes/12.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/12.webp"
+                        alt="Perrita Mestiza en brazos jadeando con lengua afuera y mirando tiernamente a su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-13">
+                <a href="../multimedia/galeria/canes/13.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/13.webp"
+                        alt="Perro Bichón Frisé mirando tiernamente a su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-14">
+                <a href="../multimedia/galeria/canes/14.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/14.webp"
+                        alt="Perro Bichón Frisé picando el ojo en conjunto con su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-15">
+                <a href="../multimedia/galeria/canes/15.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/15.webp"
+                        alt="Perrita Yorkshire mirando y lamiendo de besito a su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-16">
+                <a href="../multimedia/galeria/canes/16.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/16.webp"
+                        alt="Perrita Yorkshire posando para foto mientras se lame el hocico al lado de su peluquero canino en salon grooming">
+                </a>
+            </div>
+            <div class="fot-17">
+                <a href="../multimedia/galeria/canes/17.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/17.webp"
+                        alt="Perrita Yorkshire sentada esperando en mesa de corte de pelo en salon grooming">
+                </a>
+            </div>
+            <div class="fot-18">
+                <a href="../multimedia/galeria/canes/18.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/18.webp"
+                        alt="Perro Border Collie jadeando posando para foto en tina de baño junto a su bañador canino">
+                </a>
+            </div>
+            <div class="fot-19">
+                <a href="../multimedia/galeria/canes/19.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/19.webp" alt="">
+                </a>
+            </div>
+            <div class="fot-20">
+                <a href="../multimedia/galeria/canes/20.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/20.webp"
+                        alt="Perro Bichón Mestizo recien bañado con toalla encima previo al secado esperando en su perrera de espera con mirada tierna">
+                </a>
+            </div>
+            <div class="fot-21">
+                <a href="../multimedia/galeria/canes/21.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/21.webp"
+                        alt="Perro Bichón Mestizo jadeando recien secado posando a dos patas a la mano de su peluquero canino en su perrera de espera">
+                </a>
+            </div>
+            <div class="fot-22">
+                <a href="../multimedia/galeria/canes/22.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/22.webp"
+                        alt="Perro Bichón Frisé posando y jadeando de costado con lengua afuera mostrando corte de pelo en salon grooming">
+                </a>
+            </div>
+            <div class="fot-23">
+                <a href="../multimedia/galeria/canes/23.webp" class="fresco" data-fresco-group="galeria">
+                    <img src="../multimedia/galeria/canes/23.webp"
+                        alt="Perro Bichón Frisé posando y jadeando con lengua afuera para foto en mesa de corte canino en salon grooming">
+                </a>
+            </div>
+
+
+        </section>
 
 
     </main>
@@ -122,10 +260,13 @@
 
         </div>
 
-   </footer>
-   
-<!-- inicia script js -->
-<script src="../js/bootstrap.bundle.min.js"></script>
+    </footer>
+
+    <!-- inicia script js -->
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <!-- inicia script jquery y fresco  -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="../js/fresco.min.js"></script>
 
 </body>
 
