--- a/vistas html/Peluquería.html
+++ b/vistas html/Peluquería.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DogSides - Peluquería</title>
     <!-- metas para seo  -->
-    <meta name="description" content="Nos especializamos en el buen trato y atención de su mascota. Contamos con personal a disposición en mención pro bienestar animal para un servicio VIP">
-    <meta name="keywords" content="peluquería canina, perros, dogsides, atención vip, pro-bienestar"
-    <!-- link a favicon -->
+    <meta name="description"
+        content="Nos especializamos en el buen trato y atención de su mascota. Contamos con personal a disposición en mención pro bienestar animal para un servicio VIP">
+    <meta name="keywords" content="peluquería canina, perros, dogsides, atención vip, pro-bienestar" <!-- link a favicon
+        -->
     <link rel="shortcut icon" href="../multimedia/favicon/icons8-dog-house-24.png" type="image/x-icon">
-
     <!-- link al css de boostrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-
     <!-- link a mi css -->
     <link rel="stylesheet" href="../css/styles.css">
 
@@ -64,7 +63,7 @@
                         </li>
 
                         <li>
-                            <button class="btn"><a href="../vistas html/Reservas.html">RESERVA</a>
+                            <button class="btn"><a href="../vistas html/RESERVA.html">RESERVA</a>
                             </button>
                         </li>
 
@@ -78,15 +77,15 @@
     <!-- cierre de pestañas cabecera -->
 
     <main>
-        <h1 class="text-center mt-5">LISTA DE PRECIOS</h1>
-        <div class="container mt-5 mb-5 ">
+        <h1 class="h1P text-center">LISTA DE PRECIOS</h1>
+        <div class="container mt-5 mb-5">
             <div class="row">
                 <div class="col">
-                    <table class="table table-bordered table-hover border-dark shadow text-center">
+                    <table class="table table-bordered table-hover border-dark shadow text-center tabla">
 
-                        <thead class="text-center align-middle table-light">
+                        <thead class="text-center align-middle">
 
-                            <tr>
+                            <tr class="colorT">
 
                                 <th>Peso (kg)</th>
                                 <th>Solo baño</th>
@@ -202,8 +201,8 @@
 
     </footer>
 
-<!-- inicia script js -->
-<script src="../js/bootstrap.bundle.min.js"></script>
+    <!-- inicia script js -->
+    <script src="../js/bootstrap.bundle.min.js"></script>
 
 </body>
 
