--- a/vistas html/Tienda.html
+++ b/vistas html/Tienda.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DogSides - Productos Recomendados</title>
     <!-- metas para seo  -->
-    <meta name="description" content="Nos especializamos en el buen trato y atención de su mascota. Contamos con personal a disposición en mención pro bienestar animal para un servicio VIP">
-    <meta name="keywords" content="peluquería canina, perros, productos recomendados, alimentos"
-    <!-- link a favicon -->
+    <meta name="description"
+        content="Nos especializamos en el buen trato y atención de su mascota. Contamos con personal a disposición en mención pro bienestar animal para un servicio VIP">
+    <meta name="keywords" content="peluquería canina, perros, productos recomendados, alimentos" <!-- link a favicon -->
     <link rel="shortcut icon" href="../multimedia/favicon/icons8-dog-house-24.png" type="image/x-icon">
-
     <!-- link al css de boostrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-
     <!-- link a mi css -->
     <link rel="stylesheet" href="../css/styles.css">
 
@@ -65,7 +63,7 @@
                         </li>
 
                         <li>
-                            <button class="btn"><a href="../vistas html/Reservas.html">RESERVA</a>
+                            <button class="btn"><a href="../vistas html/RESERVA.html">RESERVA</a>
                             </button>
                         </li>
 
@@ -103,10 +101,11 @@
                             <div id="tienda">
 
                                 Para nuestros jóvenes héroes que se esfuerzan por jugar mucho: <br> Una
-                                combinación especial para perros de razas medianas y grandes. Con aporte energético reducido y contenido moderado de grasas y proteínas,
+                                combinación especial para perros de razas medianas y grandes. Con aporte energético
+                                reducido y contenido moderado de grasas y proteínas,
                                 garantiza un ritmo de crecimiento moderado, huesos fuertes y articulaciones sanas.</p>
 
-                                
+
 
                             </div>
 
@@ -275,8 +274,8 @@
 
     </footer>
 
-<!-- inicia script js -->
-<script src="../js/bootstrap.bundle.min.js"></script>
+    <!-- inicia script js -->
+    <script src="../js/bootstrap.bundle.min.js"></script>
 
 </body>
 
