Subida - Proyecto Final

--- a/vistas html/Peluquería.html
+++ b/vistas html/Peluquería.html
@@ -78,82 +78,81 @@
 
     <main>
         <h1 class="h1P text-center">LISTA DE PRECIOS</h1>
-        <div class="container mt-5 mb-5">
-            <div class="row">
-                <div class="col">
-                    <table class="table table-bordered table-hover border-dark shadow text-center tabla">
 
-                        <thead class="text-center align-middle">
+        <div class="container-fluid mt-5 mb-5">
+            
+            <div class="col">
 
-                            <tr class="colorT">
+                <table class="table-bordered table-hover border-dark shadow text-center tabla">
 
-                                <th>Peso (kg)</th>
-                                <th>Solo baño</th>
-                                <th>Baño y corte</th>
+                    <thead class="text-center">
 
-                            </tr>
+                        <tr class="colorT">
 
-                        <tbody>
+                            <th>Peso (kg)</th>
+                            <th>Solo baño</th>
+                            <th>Baño y corte</th>
 
-                            <tr>
-                                <td>0.1 a 7 kg</td>
-                                <td>$15.000 </td>
-                                <td>$18.000</td>
+                        </tr>
 
-                            </tr>
+                    <tbody>
 
-                            <tr>
-                                <td>12 a 17 kg</td>
-                                <td>$17.000</td>
-                                <td>$20.000</td>
+                        <tr>
+                            <td>0.1 a 7 kg</td>
+                            <td>$15.000 </td>
+                            <td>$18.000</td>
 
-                            <tr>
-                                <td>17 a 24 kg</td>
-                                <td>$20.000</td>
-                                <td>$24.000</td>
+                        </tr>
 
-                            </tr>
+                        <tr>
+                            <td>12 a 17 kg</td>
+                            <td>$17.000</td>
+                            <td>$20.000</td>
 
-                            <tr>
-                                <td>24 a 30 kg</td>
-                                <td>$30.000</td>
-                                <td>$35.000</td>
+                        <tr>
+                            <td>17 a 24 kg</td>
+                            <td>$20.000</td>
+                            <td>$24.000</td>
 
-                            </tr>
+                        </tr>
 
-                            <tr>
-                                <td>30 a 35 kg</td>
-                                <td>$34.000 </td>
-                                <td>$38.000</td>
+                        <tr>
+                            <td>24 a 30 kg</td>
+                            <td>$30.000</td>
+                            <td>$35.000</td>
 
-                            </tr>
+                        </tr>
 
-                            <tr>
-                                <td>35 a 40 kg</td>
-                                <td>$42.000</td>
-                                <td>$49.000</td>
+                        <tr>
+                            <td>30 a 35 kg</td>
+                            <td>$34.000 </td>
+                            <td>$38.000</td>
 
-                            </tr>
+                        </tr>
 
-                            <tr class="text-center align-middle">
-                                <th>Baño sanitario</th>
-                                <td colspan="2">$3.000</td>
+                        <tr>
+                            <td>35 a 40 kg</td>
+                            <td>$42.000</td>
+                            <td>$49.000</td>
 
+                        </tr>
 
-
-
-
-                            </tr>
-
-                        </tbody>
-
-                        </thead>
+                        <tr class="text-center align-middle">
+                            <th>Baño sanitario</th>
+                            <td colspan="2">$3.000</td>
 
 
-                    </table>
 
 
-                </div>
+
+                        </tr>
+
+                    </tbody>
+
+                    </thead>
+
+
+                </table>
 
             </div>
 
