--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 
         <section>
 
-            <div class="grid">
+            <div class="grid img-thumbnail">
 
-                <div class="col-sm-12 col.md.6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3">
 
                     <div id="media" class="carousel slide img-thumbnail">
 
@@ -173,7 +173,7 @@
 
                         </div>
 
-                        <div class="carousel-inner m-auto container">
+                        <div class="carousel-inner container pt-4">
 
                             <div id="caption" class="carousel-item active text-center align-middle">
 
@@ -181,7 +181,7 @@
                                     alt="Acariciando a perro en mesa grooming previo al corte">
 
 
-                                <span>
+                                <span class="me-2">
 
                                     <span><br></span>
                                     <span><br></span>
@@ -278,20 +278,24 @@
                             <span class="visually-hidden">Next</span>
                         </button>
 
-                    </div>
-                    <div>
 
-                        <h2><span>Destacados</span></h2>
 
                     </div>
 
                     <div>
 
-                        <a href="vistas html/Galería.html" target="_blank">
+                        <h2 class="hC">Destacados
+                            
+                            <a href="vistas html/Galería.html" target="_blank">
+                                
+                                <span class="Gal">
+                                    Galería            
+                                </span> 
 
-                            <h3>Galería</h3>
+                            </a>
+                        </h2>
 
-                        </a>
+
 
                     </div>
 
@@ -299,27 +303,21 @@
 
                 <!--  galeria -->
 
-                <div>
+                <div >
 
                     <div id="media" class="grid img-thumbnail">
 
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6106.394167275056!2d-70.64214954207034!3d-33.43537191313607!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbbb70dc2cbdce1b0!2sParque%20Forestal!5e0!3m2!1ses-419!2scl!4v1672154744202!5m2!1ses-419!2scl"
-                            width="mx-auto" height="480" allowfullscreen=" padding-top=0" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade">
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6106.394167275056!2d-70.64214954207034!3d-33.43537191313607!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbbb70dc2cbdce1b0!2sParque%20Forestal!5e0!3m2!1ses-419!2scl!4v1672154744202!5m2!1ses-419!2scl">
                         </iframe>
 
                     </div>
 
                     <div class="text-center mobile">
 
-                        <h2>
 
-                            Ubícanos
+                        Ubícanos <br>(Todas las semanas)
 
-                        </h2>
-
-                        <span class="t-small">(Todas las semanas)</span>
 
 
                     </div>
@@ -329,25 +327,23 @@
 
             </div>
 
-        </section>
-
     </main>
 
     <!-- Finaliza Main -->
 
     <!-- ubicanos -->
 
-    <aside id="aside" class="justify-content-center text-center">
+    <aside id="aside" class="container-fluid justify-content-center text-center">
 
-        (Zonas recreativas en Santiago)
+        Zonas recreativas
 
 
         <div>
 
-            <div> Haz click</div>
+        Haz click
 
             <a href="https://www.munistgo.cl/santiago-ya-cuenta-con-10-zonas-recreativas-caninas/"
-                target="_blank">Aquí</a> para ver más zonas
+                target="_blank"><b>Aquí</b></a> para ver más
 
         </div>
 
