--- a/vistas html/Page-404.html
+++ b/vistas html/Page-404.html
@@ -77,7 +77,7 @@
 
     <!-- cierre de pestañas cabecera -->
 
-    <h1 class="container-fluid text-center mt-5"> UPPPSS... Lamentamos lo que sucedió
+    <h1 class="container-fluid text-center mt-3 pt-5"> UPPPSS... Lamentamos lo que sucedió
         <br> <span class="parpadea text"><br>
             <strong> Error 404 </strong> <br> Página no encontrada
 
@@ -85,7 +85,7 @@
 
     <main>
 
-        <section class="container-fluid mt-sm-5 mb-lg-5">
+        <section class="container-fluid mb-lg-5">
 
             <div class="row">
 
@@ -111,7 +111,7 @@
                         <div class="tongue"></div>
                     </div>
 
-                    <div>
+                    <div class="casita">
 
                         <img src="../multimedia/galeria/extras/Casita.webp" alt="">
 
