--- a/vistas html/Reserva.html
+++ b/vistas html/Reserva.html
@@ -82,19 +82,19 @@
             <div>
 
                 <iframe
-                    src="https://calendar.google.com/calendar/embed?src=4a01591299a6532fa7ee41c1fa01b58d33522b96c4fff38fbf67d2c5a92fb0ed%40group.calendar.google.com&ctz=America%2FSantiago">
+                    src="https://calendar.google.com/calendar/embed?height=350&wkst=2&bgcolor=%23ffffff&ctz=America%2FSantiago&title=%20%20%20%20%20%20%20%20%20%20%20%20%20%20Reserve%20hora%20en%20DogSides&showPrint=0&showCalendars=0&showNav=1&src=NGEwMTU5MTI5OWE2NTMyZmE3ZWU0MWMxZmEwMWI1OGQzMzUyMmI5NmM0ZmZmMzhmYmY2N2QyYzVhOTJmYjBlZEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F6BF26" style="border:solid 1px rgb(16, 72, 214)" width="700" height="350" frameborder="0" scrolling="no">
                 </iframe>
 
             </div>
 
         </section>
 
-        <section class="container-fluid w-75 Reservas">
+        <section class="container-sm w-auto Reservas">
 
-            <form>
-                <div class="form-row">
+            <form class="font">
+                <div class="form-row w-100">
                     <div class="form-group col-md-12 m-3 w-auto">
-                        <label for="inputEmail4">E-mail</label>
+                        <label for="inputEmail4"> E-mail</label>
                         <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
                     </div>
                     <div class="form-group col-md-12 m-3 w-auto">
@@ -130,7 +130,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="form-group col-md-12 m-3 w-auto mt-5">
+                <div class="form-group col-md-12 m-3 w-auto mt-5 pt-xxl-5">
                     <div class="form-check">Buscar mascota
                         <input class="form-check-input" type="checkbox" id="gridCheck">
                         <label class="form-check-label" for="gridCheck">
